# nonebot-plugin-hibank

./: .gitignore  README.md  pyproject.toml
nonebot_plugin_hibank/: __init__.py  bank_icons.py  cache.py  client.py  commands.py  config.py  marks.py  models.py  names.py  render.py
nonebot_plugin_hibank/assets/: bank_assets.json  bank_logos_LICENSE.txt
