[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot-plugin-hibank"
version = "0.2.4"
description = "查询 HiBank 城市银行分布与网点信息并提供标记关注等功能的 NoneBot2 插件"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [
  { name = "lhc" }
]
dependencies = [
  "beautifulsoup4>=4.12,<5",
  "nonebot2>=2.3.0",
  "nonebot-adapter-onebot>=2.0.0",
  "nonebot-plugin-localstore>=0.7.0",
  "Pillow>=10.0.0",
  "requests>=2.31,<3"
]

[project.urls]
Homepage = "https://github.com/WhyPilotXia/nonebot-plugin-hibank"
Repository = "https://github.com/WhyPilotXia/nonebot-plugin-hibank"
Issues = "https://github.com/WhyPilotXia/nonebot-plugin-hibank/issues"

[tool.nonebot]
plugins = ["nonebot_plugin_hibank"]

[tool.setuptools.packages.find]
where = ["."]
include = ["nonebot_plugin_hibank*"]

[tool.setuptools.package-data]
nonebot_plugin_hibank = ["assets/*.ttf"]
